cabal-version:       >=1.10

name:                BatbinBackend
version:             0.1.0.0
description:         a REST API for Batbin
license-file:        LICENSE
author:              Udit Karode
maintainer:          udit.karode@gmail.com
build-type:          Simple

executable BatbinBackend
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.20
                     , Spock
                     , text
                     , aeson
                     , uuid
                     , directory
                     , ansi-terminal
  default-language:    Haskell2010
