cabal-version:       >=1.10

name:                BatbinBackend
version:             0.1.0.0
description:         a REST API for Batbin
license-file:        LICENSE
author:              Udit Karode
maintainer:          udit.karode@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable BatbinBackend
  main-is:             Main.hs
  other-modules:       Utils Routes
  hs-source-dirs:      src
  build-depends:       base >=4.13 && <4.14
                     , Spock
                     , text
                     , aeson
                     , uuid
                     , directory
                     , ansi-terminal
                     , MissingH
                     , wai
                     , iproute
                     , network
  default-language:    Haskell2010
